--- a/full-stack-project/FAQ.txt
+++ b/full-stack-project/FAQ.txt
@@ -17,6 +17,11 @@ yarn hardhat test
 yarn test
 yarn --version
 
+2025  yarn add --dev @nomiclabs/hardhat-ethers@npm:hardhat-deploy-ethers ethers @nomiclabs/hardhat-etherscan @nomiclabs/hardhat-waffle chai ethereum-waffle hardhat hardhat-contract-sizer hardhat-deploy hardhat-gas-reporter prettier prettier-plugin-solidity solhint solidity-coverage dotenv
+ 2026  yarn add -D @chainlink/contracts
+
+
+
 -------------------------------
 
 - hardhat.config.js
